--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Software engineer, software craftsmanship. Especialist in Java.
 baseurl: "" # the subpath of your site, e.g. /blog/
 #url: "http://josemanuel.prietopalacios.net" # the base hostname & protocol for your site
-url: http://localhost:4000
+url: http://prietopa.github.io/
 twitter_username: prietibiris
 github_username:  prietopa
 paginate: 5
